--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ pytest~=8.4.1
 isaaclab~=0.40.22
 numpy~=1.26.4
 isaacsim~=4.5.0.0
-torch~=2.5.1+cu121
+torch~=2.5.1
 tqdm~=4.67.1
 toml~=0.10.2
 flatdict~=4.0.1
 pillow~=11.2.1
 scipy~=1.15.3
-gymnasium~=1.2.0
+gymnasium~=1.1.1
 trimesh~=4.7.1
 matplotlib~=3.10.3
 utils~=1.0.2
@@ -21,12 +21,15 @@ stable-baselines3~=2.6.0
 gym~=0.23.1
 ipython~=8.37.0
 ipywidgets~=8.1.5
-tensorboard~=2.19.0
+tensorboard~=2.20.0
 hydra-core~=1.3.2
 omegaconf~=2.3.0
 numba~=0.61.2
 scikit-learn~=1.7.0
-torchvision~=0.20.1+cu121
+torchvision~=0.20.1
 inverseassemblyproject~=0.0.0
 skrl~=1.4.3
 packaging~=25.0
+pygame~=2.1.0
+sympy~=1.13.1
+wandb~=0.12.21
