sweep done, need to setup IK controls and force sensor next

--- a/scripts/inverse/disassembly/sweep.yaml
+++ b/scripts/inverse/disassembly/sweep.yaml
@@ -1,7 +1,7 @@
 program: train_disassembly.py
 method: bayes
 metric:
-  name: rollout/mean_reward
+  name: rollout/success_rate
   goal: maximize
 
 early_terminate:
