--- a/scripts/inverse/assembly_by_inverse/sweep.yaml
+++ b/scripts/inverse/assembly_by_inverse/sweep.yaml
@@ -11,9 +11,9 @@ early_terminate:
 parameters:
   # --------- Data ---------
   demo_path:
-    value: ./datasets/disassembly_15.hdf5
+    value: ./datasets/only_pullout_15.hdf5.hdf5
   val_demo_path:
-    value: ./datasets/disassembly_validation_5.hdf5
+    value: ./datasets/only_pullout_validation_5.hdf5.hdf5
 
   # --------- Stage toggles (sweep can enable/disable) ---------
   train_phase:
@@ -52,17 +52,13 @@ parameters:
     min: 1.0e-4
     max: 5.0e-3
   phase_batch:
-    values: [128, 256, 512]
+    values: [128, 256]
   phase_epochs:
     values: [5000, 10000, 15000]
   phase_tv_weight:
     distribution: uniform
-    min: 0.05
+    min: 0.02
     max: 0.25
-  phase_val_period:
-    values: [50, 100, 200]
-  phase_patience:
-    values: [400, 800, 1200]
 
   # --------- BC Policy ---------
   bc_hidden:
@@ -81,13 +77,7 @@ parameters:
   bc_epochs:
     values: [5000, 20000, 50000]
   bc_action_offset:
-    values: [1, 3, 5, 7]
-  bc_reverse_time:
-    values: [true, false]
-  bc_val_period:
-    values: [50, 100, 200]
-  bc_patience:
-    values: [200, 500, 800]
+    values: [1, 3, 5]
 
   # --------- PPO (SB3) ---------
   ppo_n_steps:
@@ -97,7 +87,7 @@ parameters:
   ppo_lr:
     distribution: log_uniform_values
     min: 1.0e-5
-    max: 3.0e-4
+    max: 1.0e-3
   ppo_ent_coef:
     distribution: log_uniform_values
     min: 1.0e-4
@@ -109,13 +99,7 @@ parameters:
   ppo_gae_lambda:
     values: [0.9, 0.95, 0.97]
   ppo_clip_range:
-    values: [0.1, 0.2, 0.3]
-
-  # --------- Reward shaping ---------
-  reward_weight:
-    distribution: log_uniform_values
-    min: 0.1
-    max: 5.0
+    values: [0.1, 0.2]
 
   # --------- Runtime / logging ---------
   total_timesteps:
